--- a/app/src/main/res/layout/contact_form.xml
+++ b/app/src/main/res/layout/contact_form.xml
@@ -31,6 +31,7 @@
         android:layout_height="48dp"
         android:ems="10"
         android:hint="Number"
-        android:inputType="number" />
+        android:inputType="number"
+        android:maxLength="8"/>
 
 </LinearLayout>
